# openblack

./: .clang-format  .clang-format-ignore  .clang-tidy  .clangd  .cmake-format.py  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .licenserc.json  .linelint.yml  .travis.yml  AUTHORS.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  DONOTCOMMIT.md  README.md  appveyor.yml  azure-pipelines-ci.yml  contributing.md  contributors.md  index.html  readme.md  vcpkg-configuration.json  vcpkg.json
apps/anmtool/: CMakeLists.txt  anmtool.cpp
apps/camtool/: CMakeLists.txt  camtool.cpp
apps/g3dtool/: CMakeLists.txt  g3dtool.cpp
apps/glwtool/: CMakeLists.txt  glwtool.cpp  readme.md
apps/l3dtool/: CMakeLists.txt  l3dtool.cpp  tiny_gltf.h
apps/lhvmtool/: CMakeLists.txt  lhvmtool.cpp
apps/lndtool/: CMakeLists.txt  lndtool.cpp
apps/morphtool/: CMakeLists.txt  morphtool.cpp
apps/packtool/: CMakeLists.txt  packtool.cpp
apps/sadtool/: CMakeLists.txt  sadtool.cpp
components/Audio/: CMakeLists.txt
components/ScriptLibrary/: CMakeLists.txt  README.md
components/anm/: CMakeLists.txt
components/cam/: CMakeLists.txt
components/file_utils/: CMakeLists.txt
components/glw/: CMakeLists.txt
components/l3d/: CMakeLists.txt
components/lnd/: CMakeLists.txt
components/morph/: CMakeLists.txt
components/pack/: CMakeLists.txt
components/sad/: CMakeLists.txt
src/: AllMeshes.cpp  AllMeshes.h  Balance.cpp  Balance.h  CHLApi.cpp  CHLApi.h  CMakeLists.txt  Console.cpp  Console.h  CreatureBody.cpp  CreatureBody.h  EngineConfig.h  Enums.h  Game.cpp  Game.h  GameInterface.h  GameWindow.cpp  GameWindow.h  GitSHA1.cpp  GitSHA1.cpp.in  GitSHA1.h  Gui.cpp  Gui.h  HelpText.cpp  HelpText.h  HelpTextEnums.h  InfoConstants.cpp  InfoConstants.h  LHVMViewer.cpp  LHVMViewer.h  Level.cpp  Level.h  LevelLocator.cpp  LevelLocator.h  Locator.cpp  Locator.h  MeshViewer.cpp  MeshViewer.h  NewSrcFile.cpp  Profiler.cpp  (+8 more)
src/3D/: AllMeshes.cpp  AllMeshes.h  AnimationPack.cpp  AnimationPack.h  AxisAlignedBoundingBox.h  Camera.cpp  Camera.h  CameraPath.cpp  CameraPath.h  CreatureBody.cpp  CreatureBody.h  Extent.h  Extent2D.h  Glow.h  Hand.cpp  Hand.h  L3DAnim.cpp  L3DAnim.h  L3DMesh.cpp  L3DMesh.h  L3DModel.cpp  L3DModel.h  L3DSubMesh.cpp  L3DSubMesh.h  LandBlock.cpp  LandBlock.h  LandCell.cpp  LandCell.h  LandIsland.cpp  LandIsland.h  LandIslandInterface.h  Light.h  Mesh.cpp  Mesh.h  MeshLocator.cpp  MeshLocator.h  MeshLookup.cpp  MeshLookup.h  MeshPack.cpp  MeshPack.h  (+14 more)
src/Audio/: AlCheck.cpp  AlCheck.h  AudioDecoderInterface.h  AudioManager.cpp  AudioManager.h  AudioManagerInterface.h  AudioManagerNoOp.h  AudioPlayer.cpp  AudioPlayer.h  AudioPlayerInterface.h  MpegAudioDecoder.cpp  MpegAudioDecoder.h  Sound.h  SoundGroup.h  WavAudioDecoder.cpp  WavAudioDecoder.h
src/Camera/: Camera.cpp  Camera.h  CameraModel.cpp  CameraModel.h  DefaultWorldCameraModel.cpp  DefaultWorldCameraModel.h  OldCameraModel.cpp  OldCameraModel.h  ReflectionCamera.cpp  ReflectionCamera.h  ReflectionXZCamera.cpp  ReflectionXZCamera.h
src/Common/: Bitmap16B.cpp  Bitmap16B.h  CmdLineArgs.cpp  CmdLineArgs.h  Color.h  EventManager.h  File.cpp  File.h  FileStream.cpp  FileStream.h  FileSystem.cpp  FileSystem.h  IFile.h  IOStream.h  IStream.h  LHSegment.h  LHSegmentFile.cpp  LHSegmentFile.h  Logging.cpp  Logging.h  MemoryStream.cpp  MemoryStream.h  MeshLookup.cpp  MeshLookup.h  OSFile.cpp  OSFile.h  Queue.h  RNG.h  RNGManager.cpp  RNGManager.h  RandomNumberManager.h  RandomNumberManagerProduction.cpp  RandomNumberManagerProduction.h  RandomNumberManagerTesting.cpp  RandomNumberManagerTesting.h  Spiral.cpp  Spiral.h  StringUtilities.h  StringUtils.cpp  StringUtils.h  (+6 more)
src/Creature/: CreatureMind.h
src/Debug/: Audio.cpp  Audio.h  Camera.cpp  Camera.h  Console.cpp  Console.h  DebugGuiInterface.h  DebugWindow.cpp  FontViewer.cpp  FontViewer.h  Gui.cpp  Gui.h  ImGuiUtils.h  LHVMViewer.cpp  LHVMViewer.h  LandIsland.cpp  LandIsland.h  MeshViewer.cpp  MeshViewer.h  PathFinding.cpp  PathFinding.h  Profiler.cpp  Profiler.h  Temple.cpp  Temple.h  TextureViewer.cpp  TextureViewer.h  Window.cpp  Window.h
src/DebugGUI/: GUILandIsland.cpp  GUILandIsland.h
src/Dynamics/: LandBlockBulletMeshInterface.h
src/ECS/: LoadingContext.h  Map.cpp  Map.h  MapProduction.cpp  MapProduction.h  Registry.cpp  Registry.h  RegistryContext.h  RegistryProduction.cpp  RegistryProduction.h
src/Entities/: Registry.cpp  Registry.h  RegistryContext.h
src/FileSystem/: AndroidFileSystem.cpp  AndroidFileSystem.h  CdFileSystem.cpp  CdFileSystem.h  DefaultFileSystem.cpp  DefaultFileSystem.h  FileStream.cpp  FileStream.h  FileSystem.cpp  FileSystem.h  FileSystemInterface.cpp  FileSystemInterface.h  IStream.h  MemoryStream.cpp  MemoryStream.h  Stream.h
src/Graphics/: DebugDraw.cpp  DebugDraw.h  DebugLines.cpp  DebugLines.h  FrameBuffer.cpp  FrameBuffer.h  Framebuffer.h  GameShaders.cpp  GameShaders.h  GraphicsHandle.h  GraphicsHandleBgfx.h  IndexBuffer.cpp  IndexBuffer.h  InstanceDesc.cpp  InstanceDesc.h  Mesh.cpp  Mesh.h  MetalViewHelper.mm  OpenGL.h  Primitive.cpp  Primitive.h  RenderPass.h  Renderer.cpp  Renderer.h  RendererInterface.h  Shader.cpp  Shader.h  ShaderIncluder.h  ShaderManager.cpp  ShaderManager.h  ShaderManagerInterface.h  ShaderProgram.cpp  ShaderProgram.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  Texture2DArray.cpp  (+4 more)
src/Gui/: Console.cpp  Console.h  DebugWindow.cpp  DebugWindow.h  Gui.cpp  Gui.h  LHVMViewer.cpp  LHVMViewer.h  LandIsland.cpp  LandIsland.h  MeshViewer.cpp  MeshViewer.h  PathFinding.cpp  PathFinding.h  Profiler.cpp  Profiler.h  TextureViewer.cpp  TextureViewer.h
src/Input/: GameActionMap.cpp  GameActionMap.h  GameActionMapInterface.h
src/LH3D/: LHOSFile.cpp  LHOSFile.h  LandBlock.cpp  LandBlock.h  LandCell.h  LandIsland.cpp  LandIsland.h  oldLH3DIsland.cpp  (+1 more)
test/: CMakeLists.txt  test_camera.cpp  test_fixed.cpp  test_fixed.h  test_game_initialize.cpp  test_interpolator.cpp  test_load_scene.cpp  test_set_camera_pos.cpp  vector_compare.h
(+556 files in other folders)
